[package]
name = "proof-of-history"
version = "0.1.0"
edition = "2021"
description = "A naive, minimalist, demo implementation of Proof of History."
license = "MIT OR Apache-2.0"
repository = "https://github.com/mitchmindtree/proof-of-history"

[dependencies]
digest = "0.10"
rayon = "1.8"

[dev-dependencies]
blake3 = { version = "1.5", features = ["traits-preview"] }
criterion = "0.4"
sha2 = "0.10"
sha3 = "0.10"

[[bench]]
name = "ticks"
harness = false
